// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
  >
    <select
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
      data-testid="Select"
    >
      <option
        data-testid="select-option"
        selected=""
        value="1"
      >
        Option 1
      </option>
      <option
        data-testid="select-option"
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-12 text-lg pointer-events-none text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
  >
    <select
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
      data-testid="Select"
    >
      <option
        disabled=""
        selected=""
        value=""
      >
        Select option
      </option>
    </select>
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO w-12 text-lg pointer-events-none text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
